# loggregate

./: .gitignore  Cargo.toml  README.org  requirements.txt
assets/: index.html
src/: analyse.rs  cli.rs  fileops.rs  main.rs  plot.rs  report.rs
src/analyse/: aggregate.rs  calc.rs  dtfmt.rs  loglevel.rs
