[package]
name = "loggregate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plotters = "0.3.6"
glob     = "0.3.1"
clap = { version = "4.5.9", features = ["derive"] }
chrono = "0.4.38"
fs_extra = "1.3.0"
regex = "1.10.5"
